--- a/views/aboutpage.ejs
+++ b/views/aboutpage.ejs
@@ -8,7 +8,7 @@
 <p2>The purpose of this web application is to keep track of the winery business as to how much
     wine, company connections, specialties, locations, and overall the winery in itself.
     Currently working on a customer feature that will allow customers to see a selection of wine
-    that is filtered via their selection of the wine's age</p2>
+    that is filtered via their selection of the wine's name</p2>
 <br/>
 <br />
 <p3>If you want to know about the info on the wine business as a whole, and what where to find
